--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -4,7 +4,7 @@ menu:
   visible: true
   order: 0
 ---
-# Status: <span class="text--danger">Incomplete & Unstable.</span>
+# Current Status: <span class="text--danger">Incomplete & Unstable.</span>
 
 _I'm building the site about Cushy Text with Cushy Text while I build Cushy 
 Text. That's so ... meta._ 
