docs: make anchor for current focus static

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -47,7 +47,7 @@ $ deno task maintainer-clean
 The first one removes `_site` and local cache items, but does not remove `node_modules`; 
 the second task will first run the first, and then also remove `node_modules`.
 
-## Current Focus (All must be done before `0.0.1` testing release)
+<h2 id="current_focus">Current Focus (All must be done before `0.0.1` testing release)</h2>
 
  - Search! (See whole section below this one)
 
