--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -118,15 +118,13 @@ following table:
 | router | Server Middleware | base | Lume Official | Yes | Yes |
 | conductor  | Required Theme Plugin | base | Tim Post | Yes | Yes |
 | og-images | Generate OG Images From Templates | base | Lume Official | No | No |
-| picture | Create Responsive Images Automatically | base | Lume Official | No | No |
+| picture | Create Responsive Images Automatically | base | Lume Official | Yes | Yes` |
 | basepath   | Core Lume Plugin       | base | Lume Official | Yes | Yes |
 | nav        | Nav helper for Lume    | base | Lume Official | Yes | N/A |
-| transform-images | Transform Images | base | Lume Official | No | No |
+| transform-images | Transform Images | base | Lume Official | Yes | Yes` |
 | mdx        | Default Document, Built On SSX | base | Lume Official | Yes | N/A |
-| google-fonts | Font Manager | base | Lume Official | No | No |
-| postcss    | CSS Processor          | css | Lume Official | Yes | No |
+| postcss    | CSS Processor          | css | Lume Official | Yes | Yes` |
 | purgecss   | CSS Cleaner            | css | Lume Official | No | No |
-| sourcemaps | Source Map Generator   | css | Lume Official | No | No |
 | feed       | Generate Feeds         | seo | Lume Official | Yes | Yes |
 | sitemap    | Generate Sitemap       | seo | Lume Official | Yes | Yes |
 | robots     | Generate robots.txt    | seo | Lume Official | Yes | Yes |
