Lots, and lots of plugins

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -112,30 +112,30 @@ following table:
 
 <h3 id="plugin-status">List & Status Of All Planned Plugins:</h3>
 
-| Plugin | Description | Type | Author | Installed? | Configured? |
+| Plugin | Description | Type | Author | Installed? | Custom Configured? |
 |:-:|:-:|:-:|:-:|:-:|:-:|
-| expires | Server Middleware | base | Lume Official | Yes | Yes |
+| expires | Server Middleware | base | Lume Official | Yes | No |
 | router | Server Middleware | base | Lume Official | Yes | Yes |
 | conductor  | Required Theme Plugin | base | Tim Post | Yes | Yes |
 | og-images | Generate OG Images From Templates | base | Lume Official | No | No |
-| picture | Create Responsive Images Automatically | base | Lume Official | Yes | Yes` |
-| basepath   | Core Lume Plugin       | base | Lume Official | Yes | Yes |
-| nav        | Nav helper for Lume    | base | Lume Official | Yes | N/A |
-| transform-images | Transform Images | base | Lume Official | Yes | Yes` |
-| mdx        | Default Document, Built On SSX | base | Lume Official | Yes | N/A |
-| postcss    | CSS Processor          | css | Lume Official | Yes | Yes` |
-| purgecss   | CSS Cleaner            | css | Lume Official | No | No |
+| picture | Create Responsive Images Automatically | base | Lume Official | Yes | No |
+| basepath   | Core Lume Plugin       | base | Lume Official | Yes | No |
+| nav        | Nav helper for Lume    | base | Lume Official | Yes | No |
+| transform-images | Transform Images | base | Lume Official | Yes | No |
+| mdx        | Default Document, Built On SSX | base | Lume Official | Yes | No |
+| postcss    | CSS Processor          | css | Lume Official | Yes | No |
+| purgecss   | CSS Cleaner            | css | Lume Official | Yes | No |
 | feed       | Generate Feeds         | seo | Lume Official | Yes | Yes |
-| sitemap    | Generate Sitemap       | seo | Lume Official | Yes | Yes |
-| robots     | Generate robots.txt    | seo | Lume Official | Yes | Yes |
-| redirects  | Manage Redirects       | seo | Lume Official | Yes | Yes |
+| sitemap    | Generate Sitemap       | seo | Lume Official | Yes | No |
+| robots     | Generate robots.txt    | seo | Lume Official | Yes | No |
+| redirects  | Manage Redirects       | seo | Lume Official | Yes | No |
 | seo        | Static SEO Analysis    | seo | Tim Post | Yes | No |
-| metas      | Meta Tag Generation    | seo | Lume Official | Yes | Yes |
-| readinginfo | Display Reading Time  | user | Lume Official | Yes | Yes |
+| metas      | Meta Tag Generation    | seo | Lume Official | Yes | No |
+| readinginfo | Display Reading Time  | user | Lume Official | Yes | No |
 | prism | Fancy Code Highlighting | user | Lume Official | Yes | Yes |
 | terser | JavaScript Minifier | perf | Lume Official | No | No |
-| brotli | Compression | perf | Lume Official | No | No |
-| minify-html | HTML Minification | perf | Lume Official | No | No |
+| brotli | Compression | perf | Lume Official | Yes | No |
+| minify-html | HTML Minification | perf | Lume Official | Yes | No |
 | pagefind | Provides Search | search | Lume Official | Yes | No |
 
 Those listed as `No` are either being left out deliberately for now 
