--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -133,7 +133,7 @@ following table:
 | metas      | Meta Tag Generation    | seo | Lume Official | Yes | No |
 | readinginfo | Display Reading Time  | user | Lume Official | Yes | No |
 | prism | Fancy Code Highlighting | user | Lume Official | Yes | Yes |
-| terser | JavaScript Minifier | perf | Lume Official | No | No |
+| terser | JavaScript Minifier | perf | Lume Official | Yes | Yes |
 | brotli | Compression | perf | Lume Official | Yes | No |
 | minify-html | HTML Minification | perf | Lume Official | Yes | No |
 | pagefind | Provides Search | search | Lume Official | Yes | No |
