OG Image plugin!

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Meet Cushy Text: An Infima Content Theme For Lume 3!"
+description: "An Infima-based, component-driven, text-focused interactive and accessible theme for Lume 3+"
 date: 2025-03-03
 author: Tim Post
 draft: false
@@ -18,7 +19,7 @@ metas:
     - Infima Theme For Lume
     - Static blog generator
     - Static documentation generator
-  image: /uploads/announcing-cushy-text.jpg
+  image: /blog/announcing-cushy-text/index.png
   robots: true
   generator: true
 ---
