--- a/src/blog/index.mdx
+++ b/src/blog/index.mdx
@@ -1,6 +1,10 @@
 ---
-title: Blog Home
+title: Cushy Text Blog
+description: "Updates, thoughts and news about the Cushy Text theme for Lume 3+"
 layout: layouts/post-index.vto
+metas:
+  image: /blog/index.png
+  description: The Cushy Text Blog
 menu:
   order: 0
   visible: false
