--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Interactive Features Planned For The First Release:"
+description: "Content Feedback & Rating, Form Handlers, API Endpoints - All Without Edge Functions!"
 date: 2025-03-05
 author: Tim Post
 draft: false
@@ -19,7 +20,7 @@ metas:
     - Infima Theme For Lume
     - Static blog generator
     - Static documentation generator
-  image: /uploads/interactive-feature-planning.jpg
+  image: /blog/interactive-feature-plans/index.png
   robots: true
   generator: true
 ---
