--- a/src/blog/welcome-wordpress.mdx
+++ b/src/blog/welcome-wordpress.mdx
@@ -1,5 +1,6 @@
 ---
 title: I Encourage WordPress Users To Try Hybrid Static Sites!
+description: "Why Static Generators Are Extensions Of Publishing Platforms, Not A Replacement."
 date: '2025-03-09'
 author: Tim Post
 draft: false
@@ -21,7 +22,7 @@ metas:
     - WordPress With Lume
     - WordPress Static Generator
     - Lume With WordPress
-  image: /uploads/static-websites.jpg
+  image: /blog/welcome-wordpress/index.png
   robots: true
   generator: true
 ---
