--- a/src/index.mdx
+++ b/src/index.mdx
@@ -1,6 +1,9 @@
 ---
 layout: layouts/homepage.vto
-title: Cushy Text Overview
+title: Cushy Text For Lume 3
+description: An Infima-based, component-driven, text-focused interactive and accessible theme for Lume 3+.
+metas:
+  image: /index.png
 menu:
   visible: true
   align: left
