--- a/src/docs/archetypes.mdx
+++ b/src/docs/archetypes.mdx
@@ -1,5 +1,8 @@
 ---
 title: Waypoints & Folder Data Files
+description: What waypoints do, and how to work with data files.
+metas:
+  image: /docs/archetypes/index.png
 menu:
   visible: true
   order: 1
