--- a/src/docs/conductor-plugin.mdx
+++ b/src/docs/conductor-plugin.mdx
@@ -1,5 +1,8 @@
 ---
 title: Understanding The "conductor" Plugin
+description: How the "conductor" plugin provides functionality to the site.
+metas:
+  image: /docs/conductor-plugin/index.png
 menu:
   visible: true
   order: 4
