--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -1,8 +1,12 @@
 ---
 title: Overview, Status & Getting Started
+description: "Status & Quickstart: Cushy Text"
 menu:
   visible: true
   order: 0
+metas:
+  description: A primer on how to get started with the CushyText Lume Theme, Under Development.
+  image: /docs/index.png
 ---
 
 # Current Status: <span class="text--danger">Incomplete</span>
