--- a/src/docs/middleware.mdx
+++ b/src/docs/middleware.mdx
@@ -1,5 +1,8 @@
 ---
 title: Working With Lume 3 Router Middleware
+description: Building Interactive Features With Lume 3 Middleware
+metas:
+  image: /docs/middleware/index.png
 menu:
   visible: true
   order: 3
