--- a/src/docs/theme-switchers.mdx
+++ b/src/docs/theme-switchers.mdx
@@ -1,5 +1,8 @@
 ---
 title: How Do The Theme Switchers Work?
+description: How the built-in theme and font switchers work.
+metas:
+  image: /docs/theme-switchers/index.png
 menu:
   visible: true
   order: 5
