--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -1,5 +1,8 @@
 ---
 title: Infima And Lume 3 Components
+description: How Infima components naturally marry to the components in Lume 3.
+metas:
+  image: /docs/components/index.png
 menu:
   visible: true
   order: 2
