--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -111,18 +111,21 @@ custom configurations in order to perform optimally in this theme:
 |:-:|:-:|:-:|:-:|:-:|:-:|
 | expires | Server Middleware | base | Lume Official | Yes | No |
 | router | Server Middleware | base | Lume Official | Yes | Yes |
+| cache buster | Server Middleware | base | Lume Official | Yes | No |
 | conductor  | Required Theme Plugin | base | Tim Post | Yes | Yes |
 | og-images | Generate OG Images From Templates | base | Lume Official | Yes | Yes |
 | picture | Create Responsive Images Automatically | base | Lume Official | Yes | No |
 | basepath   | Core Lume Plugin       | base | Lume Official | Yes | No |
 | nav        | Nav helper for Lume    | base | Lume Official | Yes | No |
 | transform-images | Transform Images | base | Lume Official | Yes | No |
+| icons | Easily Use Open Source Icon Sets | base | Lume Official | Yes | No |
 | mdx        | Default Document, Built On SSX | base | Lume Official | Yes | No |
 | postcss    | CSS Processor          | css | Lume Official | Yes | No |
 | purgecss   | CSS Cleaner            | css | Lume Official | Yes | No |
 | feed       | Generate Feeds         | seo | Lume Official | Yes | Yes |
 | sitemap    | Generate Sitemap       | seo | Lume Official | Yes | No |
 | robots     | Generate robots.txt    | seo | Lume Official | Yes | No |
+| check_urls | Check link validity    | seo | Lume Official | Yes | Yes |
 | redirects  | Manage Redirects       | seo | Lume Official | Yes | No |
 | seo        | Static SEO Analysis    | seo | Tim Post | Yes | No |
 | metas      | Meta Tag Generation    | seo | Lume Official | Yes | No |
